@@ -51,7 +51,7 @@
     <dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-test</artifactId>
-      <version>3.4.8</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
+      <version>3.4.9</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -141,6 +141,7 @@
             <configuration>
               <argLine>
                 --add-opens com.azure.data.schemaregistry.avro/com.azure.data.schemaregistry.avro=ALL-UNNAMED
+                --add-opens com.azure.data.schemaregistry.avro/com.azure.data.schemaregistry.avro.generatedtestsources=org.apache.avro,ALL-UNNAMED
               </argLine>
             </configuration>
           </plugin>
